tests/fixtures/invalid/bad-enum.toi
{
  "$toi": "1.0.0",
  "$tier": "personal",
  "identity": {
    "author": "bad enum value"
  },
  "communication": {
    "tone": "sarcastic"
  }
}
